@@ -29,18 +29,6 @@
 ## directory for details.
 ##
 
-AC_DEFUN([SCOREP_LIBBFD], [
-scorep_have_demangle="no"
-AC_SCOREP_BACKEND_LIB([libbfd], [bfd.h])
-AC_SCOREP_COND_HAVE([LIBBFD],
-    [test "x${scorep_have_libbfd}" = "xyes"],
-    [Define if libbfd is available.])
-
-AC_SCOREP_COND_HAVE([DEMANGLE],
-    [test "x${scorep_have_demangle}" = "xyes"],
-    [Define if cplus_demangle is available.])
-])
-
 AC_DEFUN([AC_SCOREP_COMPILER_INSTRUMENTATION], [
 AC_REQUIRE([SCOREP_COMPUTENODE_CC])dnl
 AC_REQUIRE([SCOREP_COMPILER_INSTRUMENTATION_FLAGS])dnl
@@ -92,57 +80,3 @@ AC_SCOREP_COND_HAVE([COMPILER_INSTRUMENTATION_NEEDS_SYMBOL_TABLE],
 ])
 
 dnl ----------------------------------------------------------------------------
-
-AC_DEFUN([_AC_SCOREP_LIBBFD_LIB_CHECK], [
-have_libbfd="no"
-LIBS="-lbfd"
-
-_AC_SCOREP_LIBBFD_LINK_TEST
-AS_IF([test "x${have_libbfd}" = "xno"],
-      [LIBS="${LIBS} -liberty";
-       _AC_SCOREP_LIBBFD_LINK_TEST
-       AS_IF([test "x${have_libbfd}" = "xno"],
-             [LIBS="${LIBS} -lz";
-              _AC_SCOREP_LIBBFD_LINK_TEST])])
-
-AS_IF([test "x${have_libbfd}" = "xyes"],
-      [# check for demangle, libbfd CPPFLAGS|LDFLAGS|LIBS apply
-       AC_CHECK_HEADER([demangle.h])
-       AC_MSG_CHECKING([for cplus_demangle])
-       AC_LINK_IFELSE([AC_LANG_PROGRAM([[char* cplus_demangle( const char* mangled, int options );]],
-                                       [[cplus_demangle("test", 27)]])],
-                      [scorep_have_demangle="yes"
-                       libbfd_success_post_result=" and cplus_demangle"],
-                      [scorep_have_demangle="no"])
-       AC_MSG_RESULT([${scorep_have_demangle}])])
-
-with_[]lib_name[]_lib_checks_successful=${have_libbfd}
-with_[]lib_name[]_libs=${LIBS}
-])
-
-dnl ----------------------------------------------------------------------------
-
-AC_DEFUN([_AC_SCOREP_LIBBFD_LINK_TEST], [
-AC_LINK_IFELSE([_AC_SCOREP_LIBBFD_TEST_PROGRAM],
-               [have_libbfd="yes"],
-               [libbfd_link_test_save_LIBS="${LIBS}"
-                LIBS="${LIBS} -ldl"
-                AC_LINK_IFELSE([_AC_SCOREP_LIBBFD_TEST_PROGRAM],
-                               [have_libbfd="yes"],
-                               [LIBS="${libbfd_link_test_save_LIBS}"])])
-])
-
-dnl ----------------------------------------------------------------------------
-
-AC_DEFUN([_AC_SCOREP_LIBBFD_TEST_PROGRAM], [
-AC_LANG_PROGRAM([[
-char bfd_init ();
-char bfd_openr ();
-char bfd_check_format ();
-char bfd_close ();]],
-                [[
-bfd_init ();
-bfd_openr ();
-bfd_check_format ();
-bfd_close ();]])
-])
